Fix repeating background SVG in IE11
http://www.kaspertidemann.com/how-to-repeat-a-background-svg-image-in-in
ternet-explorer-10/

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,14 +1,14 @@
 // Footer Illustrations
 // --------------------
 .footer-illustrations {
-	background: url(img/sky.svg) bottom repeat-x;
-	background: url(img/sky.svg) bottom repeat-x;
+	background: url(img/sky.png) top repeat-x;
+	background: url(img/sky.svg) top repeat-x;
 	height: 320px;
 	overflow: hidden;
 	position: relative;
 	
 	&::after {
-		background: url(img/skyline.png) 20% bottom repeat-x;
+		background: url(img/skyline.png) bottom repeat-x;
 		background-size: 1446px 254px;
 		content: '';
 		display: block;
@@ -24,7 +24,6 @@
 // ----------
 .fat-footer {
 	background: $color--brand__primary url(img/waves.png) top repeat-x;
-	background: $color--brand__primary url(img/waves.svg) top repeat-x;
 	background-size: 15px 24px;
 	color: mix($color__brand--primary,$color__background-body,39.5%);  
 	overflow: hidden;
