Added URL til SVG fix

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,7 +2,7 @@
 // --------------------
 .footer-illustrations {
 	background: url(img/sky.png) top repeat-x;
-	background: url(img/sky.svg) top repeat-x;
+	background: url(img/sky.svg) top repeat-x; // http://www.kaspertidemann.com/how-to-repeat-a-background-svg-image-in-internet-explorer-10/
 	height: 320px;
 	overflow: hidden;
 	position: relative;
