--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -1,4 +1,5 @@
-.wp-caption {
+.wp-caption,
+figure.wp-caption {
 	margin-bottom: 1.5em;
 	max-width: 100%;
 
@@ -7,7 +8,11 @@
 	}
 
 	.wp-caption-text {
+		@include font-size(.75);
 		margin: 0.8075em 0;
+		color: $color__text-input;
+		font-style: italic;
+		em {font-style: normal;}
 	}
 }
 
