--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -6,16 +6,14 @@ figure.wp-caption {
 	img[class*="wp-image-"] {
 		@include center-block;
 	}
-
-	.wp-caption-text {
-		@include font-size(.75);
-		margin: 0.8075em 0;
-		color: $color__text-input;
-		font-style: italic;
-		em {font-style: normal;}
-	}
 }
 
-.wp-caption-text {
+.wp-caption-text,
+.thumbcaption {
+	@include font-size(.75);
 	text-align: center;
+	margin: 0.8075em 0;
+	color: $color__text-input;
+	font-style: italic;
+	em {font-style: normal;}
 }
