Updated Cards due to chrome css bug

--- a/sass/navigation/_links.scss
+++ b/sass/navigation/_links.scss
@@ -42,7 +42,7 @@ a {
 		@include font-size(1);
 		color: $color__brand--accent;
 		color: $color__brand--accent;
-		content: 'create';
+		content: '\e3C9';
 		font-family: 'Material Icons';
 		margin-right: .25em;
 		vertical-align: middle;
