--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -68,19 +68,17 @@
 			height: 130px;
 			position: absolute;
 			top: 0;
-			z-index: 2;
 		}
 	}
 	img {
 		width: 100%;
-		filter: sepia(50%);
+		/* filter: sepia(50%);
 		position: relative; // vertical centering: http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
 		top: 50%;
 		transform: translateY(-50%);
-		z-index: 1;
 	}
 	a.thumbnail:hover img {
-		filter: sepia(0%);
+		filter: sepia(0%); */
 	}
 	h2 {
 		margin: 0;
