--- a/style.css
+++ b/style.css
@@ -467,7 +467,7 @@ a {
     font-size: 1rem;
     color: #f2ae16;
     color: #f2ae16;
-    content: 'create';
+    content: '\e3C9';
     font-family: 'Material Icons';
     margin-right: .25em;
     vertical-align: middle;
@@ -1435,21 +1435,16 @@ input[type="submit"]:visited,
       width: 100%;
       height: 130px;
       position: absolute;
-      top: 0;
-      z-index: 2; }
+      top: 0; }
   .masonry__item img {
     width: 100%;
-    -webkit-filter: sepia(50%);
-            filter: sepia(50%);
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-    z-index: 1; }
-  .masonry__item a.thumbnail:hover img {
-    -webkit-filter: sepia(0%);
-            filter: sepia(0%); }
+    	/* filter: sepia(50%);
+    	position: relative; // vertical centering: http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
+    	top: 50%;
+    	transform: translateY(-50%);
+    }
+    a.thumbnail:hover img {
+    	filter: sepia(0%); */ }
   .masonry__item h2 {
     margin: 0; }
   .masonry__item .entry-title a {
