--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -58,9 +58,9 @@
 		height: 130px;
 		overflow: hidden;
 		transform-style: preserve-3d;
-		position: relative;
+		// position: relative;
 		text-align: center;
-		&:before {
+		/* &:before {
 			background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0) 100%);
 			content: '';
 			display: block;
@@ -68,7 +68,7 @@
 			height: 130px;
 			position: absolute;
 			top: 0;
-		}
+		} */
 	}
 	img {
 		width: 100%;
