--- a/style.css
+++ b/style.css
@@ -1425,17 +1425,16 @@ input[type="submit"]:visited,
     overflow: hidden;
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
-    position: relative;
-    text-align: center; }
-    .masonry__item a.thumbnail:before {
-      background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.3) 0%, transparent 100%);
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, transparent 100%);
-      content: '';
-      display: block;
-      width: 100%;
-      height: 130px;
-      position: absolute;
-      top: 0; }
+    text-align: center;
+    /* &:before {
+    	background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0) 100%);
+    	content: '';
+    	display: block;
+    	width: 100%;
+    	height: 130px;
+    	position: absolute;
+    	top: 0;
+    } */ }
   .masonry__item img {
     width: 100%;
     	/* filter: sepia(50%);
