--- a/style.css
+++ b/style.css
@@ -446,6 +446,8 @@ a {
     outline: thin dotted; }
   a:hover, a:active {
     outline: 0; }
+  a.hashtag:first-letter {
+    display: none; }
 
 .tags-links a, .tagcloud a {
   border-radius: 2em;
@@ -1557,7 +1559,6 @@ input[type="submit"]:visited,
   -moz-box-sizing: border-box;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
