Fixed Google Custom Search button

--- a/sass/components/_carousel.scss
+++ b/sass/components/_carousel.scss
@@ -52,7 +52,7 @@
 // Slick Slider
 // ------------
 @charset "UTF-8";
-@import "../../js/slick/slick";
+@import "../../js/slick/slick.scss";
 
 // Default Variables
 $slick-loader-path: "./js/slick/" !default;
