--- a/sass/components/_google-search.scss
+++ b/sass/components/_google-search.scss
@@ -14,7 +14,7 @@
 		border-top-right-radius: 0;
 		border-bottom-right-radius: 0em;
 		box-sizing: border-box;
-		padding: .5em 3em .5em .5em;
+		padding: .5em .3em .5em .5em;
 		width: 100%;
 	}
 	
